@@ -20,5 +20,6 @@ t/00-report-prereqs.dd
 t/00-report-prereqs.t
 t/pack-roles.t
 t/parameterized_roles.t
+t/superclass_roles.t
 xt/release/pause-permissions.t
 xt/release/unused-vars.t
