@@ -1,9 +1,8 @@
-#!/usr/bin/perl 
-
 use strict;
 use warnings;
 
-use Test::More tests => 4;
+use Test::More tests => 3;
+
 
 use Moose::Util qw' with_traits';
 
@@ -12,16 +11,19 @@ use Moose::Util qw' with_traits';
     use Moose::Role;
     has y => ( is => 'ro', default => 2 );
 }
+
 {
     package Baz;
     use Moose::Role;
-    has z => ( is => 'ro', default => 4 );
+    has z => ( is => 'ro', default => 3 );
 }
 
 {
     package Foo;
     use Moose;
     use MooseX::Storage;
+
+    with 'Bar';
 
     with Storage( base => 'SerializedClass', traits => [ 'WithRoles' ] );
 
@@ -32,15 +34,16 @@ use Moose::Util qw' with_traits';
 
 }
 
-my $x = with_traits( 'Foo', 'Bar' )->new;
+my $x = with_traits( 'Foo', 'Baz' )->new;
 
 my $packed = $x->pack;
 
 is_deeply $packed => {
     '__CLASS__' => 'Foo',
-    '__ROLES__' => [ qw/ Bar / ],
+    '__ROLES__' => [ qw/ Baz / ],
     x => 3,
     y => 2,
+    z => 3,
 }, 'packed';
 
 use MooseX::Storage::Base::SerializedClass qw/ moosex_unpack /;
@@ -54,16 +57,14 @@ sub unpacked_ok {
         isa_ok $obj, 'Foo';
         is $obj->x => 3;
         is $obj->y => 2;
+        is $obj->z => 3;
     };
 }
 
-is_deeply with_traits(qw/ Foo Bar Baz /)->new->pack => {
-    '__CLASS__' => 'Foo',
-    '__ROLES__' => [ qw/ Bar Baz / ],
-    x => 3,
-    y => 2,
-    z => 4
-}, "Foo w/ Bar & Baz";
+
+
+
+
 
 
 
